llvm-toolchain-snapshot (1:3.4~svn193603-1) unstable; urgency=low

  * New snapshot release
  * Merge changes from the 3.3 branch (see 1:3.3-10)
  * Add lldb-3.4-dev package
  * Remove mipsel-ftbfs.diff (applied upstream)
  * Add support of coverity checker (non-free and not packaged)
  * libprofile_rt and runtime has been removed upstream (r191835)
    Features are provided by compiler-rt
  * Update the build dependency from tcl8.5 to tcl (Closes: #725954)
  * Install libclang.so in /usr/lib/*/libclang-3.4.so
  * Install libclang.so.1 in /usr/lib/*/libclang-3.3.so.1
  * Also ship the python clang binding (python-clang-3.4)
  * Enable polly if the dependencies are OK

 -- Sylvestre Ledru <sylvestre@debian.org>  Fri, 20 Sep 2013 05:25:17 +0200

llvm-toolchain-snapshot (1:3.4~svn190846-1) unstable; urgency=low

  * New snapshot release
  * Merge changes from the 3.3 branch (see 1:3.3-9)
  * Remove ia64-fix.diff (applied upstream)
  * cpp11-migrate renamed to clang-modernize
  * lldb-3.4 is back to Architectures: any
  * Patch lldb-hurd.diff removed (applied upstream)
  * Directory www/ from tarballs polly & lldb removed
  * Update of the description of LLVM packages
    (LLVM no longer mean Low Level Virtual Machine)
  * Disable the build of lldb under HURD
  * Ship the lldb headers into lldb-X.Y-dev (Closes: #723743)
    I might create a liblldb-X.Y library at some point but I think it is too
    early.
  * Fix "cannot compile this atomic library call"
    Thanks to Francisco Facioni for the refresh (Closes: #705115)
  * Install libclang.so in /usr/lib/*/libclang-3.3.so
  * Install libclang.so.1 in /usr/lib/*/libclang-3.3.so.1
  * Also ship the python clang binding (python-clang-3.3)
  * Fix a FTBFS with a duplicate declaration of shouldUseInlineAtomic
  * Update the build dependency from tcl8.5 to tcl (Closes: #725953)

  [ Luca Falavigna ]
  * debian/control:
    - Add llvm-3.4-dev to lldb-3.4 Depends field.
