@@ -104,7 +104,7 @@ else
 endif
 
 LLDB_ENABLE=yes
-ifneq (,$(findstring $(DEB_HOST_ARCH), hurd))
+ifeq ($(DEB_HOST_ARCH),hurd-i386)
         LLDB_ENABLE=no
 endif
 
@@ -314,6 +314,7 @@ override_dh_installdeb:
 	rm -f $(CURDIR)/debian/lldb-$(LLVM_VERSION)/usr/lib/python*/dist-packages/lldb/__init__.pyc
 
 
+ifeq (,$(filter nocheck, $(DEB_BUILD_OPTIONS)))
 override_dh_auto_test:
 # LLVM tests
 	$(MAKE) -C $(TARGET_BUILD) check || true
@@ -344,6 +345,10 @@ override_dh_auto_test:
 		lcov --remove $$REPORT "/usr*" -o $$REPORT; \
 		genhtml -o reports/coverage --show-details --highlight --legend $$REPORT; \
 	fi
+else
+override_dh_auto_test:
+endif
+
 
 override_dh_gencontrol:
 	dh_gencontrol -- $(control_vars)
