@@ -1,7 +1,7 @@
 llvm-toolchain-snapshot (1:3.4~svn193603-1) unstable; urgency=low
 
   * New snapshot release
-  * Merge changes from the 3.3 branch (see 1:3.3-10)
+  * Merge changes from the 3.3 branch (see 1:3.3-11)
   * Add lldb-3.4-dev package
   * Remove mipsel-ftbfs.diff (applied upstream)
   * Add support of coverity checker (non-free and not packaged)
@@ -12,6 +12,7 @@ llvm-toolchain-snapshot (1:3.4~svn193603-1) unstable; urgency=low
   * Install libclang.so.1 in /usr/lib/*/libclang-3.3.so.1
   * Also ship the python clang binding (python-clang-3.4)
   * Enable polly if the dependencies are OK
+  * Honor the option "nocheck"
 
  -- Sylvestre Ledru <sylvestre@debian.org>  Fri, 20 Sep 2013 05:25:17 +0200
 
